fixed scrollbar

--- a/design/769-1024-tablet.css
+++ b/design/769-1024-tablet.css
@@ -568,7 +568,7 @@ h1 {
 
 .contacts-content {
     padding: 0 100px;
-    margin-bottom: 60px;
+    margin-bottom: 0px;
 }
 
 .add-contact-button-desktop {
